labs/kubernetes/pod-volume-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-pvc
spec:
  containers:
  - image: nginx
    name: test-container
    volumeMounts:
    - mountPath: /test-pd
      name: test-volume
    - name: test-emptydir
      mountPath: /cache
    - name: aws
      mountPath: /aws
  volumes:
  - name: test-volume
    hostPath:
      # directory location on host
      path: /home/ticiano/data
      # this field is optional
      type: DirectoryOrCreate
  - name: test-emptydir
    emptyDir:
      sizeLimit: 250Gi
  - name: aws
    persistentVolumeClaim:
      claimName: aws-pvc
