labs/kubernetes/pod.yaml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: debug-deployment
  labels:
    app: myapp
    environment: dev
    stack: frontend
spec:
  template:
    metadata:
      labels:
        app: debug-pod
    spec:
      containers:
        - name: debug-container
          image: busybox
          args:
          - /bin/sh
          - -c
          - sleep 900
  # replicas: 3
  selector:
    matchLabels:
      app: debug-pod
