labs/kubernetes/svc-cluster-ip-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-app
spec:
  selector:
    app.kubernetes.io/name: python-app
    # dos: labels
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5000
