labs/kubernetes/svc-cluster-ip.yaml
apiVersion: v1 
kind: Pod
metadata: 
  name: myapp-pod
  namespace: default
  labels:
    app: myapp-2
spec:
  containers:
  - name: nginx-container
    image: nginx

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: nginx-svc
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp-2
  type: ClusterIP
