labs/kubernetes/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
 name: myapp-service
spec:
 type: NodePort
 ports:
 - targetPort: 80
   port: 80
   nodePort: 30080
 selector:
   app: myapp-2
