labs/kubernetes/svc-running.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"myapp"},"name":"nginx-svc","namespace":"default"},"spec":{"ports":[{"port":5000,"protocol":"TCP","targetPort":80}],"selector":{"app":"myapp-2"},"type":"ClusterIP"}}
  creationTimestamp: "2024-05-06T23:53:07Z"
  labels:
    app: myapp
  name: nginx-svc
  namespace: default
  resourceVersion: "1601"
  uid: 4a3d37b7-af1f-4b8f-ada7-29791778f489
spec:
  clusterIP: 10.111.76.188
  clusterIPs:
  - 10.111.76.188
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp-2
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
